fix: fix styles on mobile

--- a/src/components/app/app.scss
+++ b/src/components/app/app.scss
@@ -5,7 +5,7 @@
   height: 100%;
   overflow-y: scroll;
   overflow-x: hidden;
-  scroll-padding: 240px;
+  scroll-padding: 200px;
 }
 
 .app {
@@ -238,6 +238,10 @@
 }
 
 @media only screen and (min-width: 320px) and (max-width: 768px) {
+  .app {
+    scroll-padding: 160px;
+  }
+
   .container {
     max-width: 640px;
     padding-left: 1.25rem;
