--- a/src/components/hero/hero.scss
+++ b/src/components/hero/hero.scss
@@ -3,6 +3,7 @@
 .hero {
   position: relative;
   width: 100%;
+  height: 640px;
   position: relative;
   display: flex;
   flex-direction: column;
