--- a/src/components/history/history.scss
+++ b/src/components/history/history.scss
@@ -116,7 +116,6 @@
 @media only screen and (min-width: 320px) and (max-width: 1024px) {
   .history {
     width: 100%;
-    gap: 40px;
 
     &-list {
       &--row {
