--- a/src/components/services/services.scss
+++ b/src/components/services/services.scss
@@ -148,7 +148,6 @@
 @media only screen and (min-width: 320px) and (max-width: 768px) {
   .services {
     width: 100%;
-    gap: 50px;
 
     &-list {
       width: 100%;
