--- a/src/components/work/work.scss
+++ b/src/components/work/work.scss
@@ -169,13 +169,8 @@
 @media only screen and (min-width: 320px) and (max-width: 768px) {
   .work {
     width: 100%;
-    height: fit-content;
-    gap: 20px;
-    padding: 120px 0;
-
     &-list {
       width: 100%;
-      gap: 40px;
 
       &--danilo,
       &--namewiz,
@@ -208,7 +203,7 @@
         }
 
         img {
-          height: 70%;
+          height: 50%;
         }
 
         &:hover {
@@ -234,8 +229,8 @@
 
       &--namewiz {
         img {
-          height: 60%;
-          opacity: 0.7;
+          height: 40%;
+          opacity: 0.8;
         }
       }
 
@@ -248,7 +243,7 @@
   }
 }
 
-@media only screen and (min-width: 320px) and (max-width: 1024px) {
+@media only screen and (min-width: 768px) and (max-width: 1024px) {
   .work {
     width: 100%;
 
